# Gra-w-ycie

./: .clang-tidy  CMakeLists.txt  Readme.md
src/: CMakeLists.txt  Gra w życie.h  board.h  drawer.h  hud.h  main.cpp
src/core/: CMakeLists.txt  Logger.h  Simulation.cpp  Simulation.h  gameobject.cpp  gameobject.h  simulation.cpp  simulation.h
src/input/: CMakeLists.txt  Input.cpp  Input.h  InputButton.cpp  InputButton.h  InputEvent.h  InputPoller.cpp  InputPoller.h  InputToken.h  ParserKeyboard.cpp  ParserKeyboard.h  input.cpp  input.h  inputbutton.cpp  inputbutton.h  inputpoller.cpp  inputpoller.h  inputtoken.h
src/logic/: CMakeLists.txt  Container.cpp  Container.h  Gra w życie.cpp  PointHandle.cpp  PointHandle.h  board.cpp  board.h  container.cpp  logic.cpp  logic.h  pointhandle.cpp
src/render/: CMakeLists.txt  CmakeLists.txt  drawer.cpp  drawer.h  irenderobj.h  renderer.cpp  renderer.h  renderer.impl.h
src/simulation/: CMakeLists.txt  simulation.cpp  simulation.h
src/ui/: CMakeLists.txt  CmakeLists.txt  hud.cpp  hud.h  inputbutton.cpp  inputbutton.h  uipanel.cpp  uipanel.h
src/util/: CMakeLists.txt  event.h  event.impl.h  fileIO.cpp  fileIO.h  logger.cpp  logger.h  parser.cpp  parser.h
tests/: BoardTest.cpp  CMakeLists.txt  ContainerTest.cpp  EventTest.cpp  ParserTest.cpp  PointHandleTest.cpp
